--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -28,6 +28,9 @@
     border-radius: 0.5rem;
     padding: 2.5rem;
   }
+  .todo-heading{
+    margin-bottom:1rem;
+  }
   h1 {
     font-size: 2.5rem;
     font-weight: 600;
@@ -37,9 +40,7 @@
     font-weight: 500;
   }
   .userinput {
-    flex:  0 1 70%;
     height: 4rem;
-    margin: 1rem 0;
     border: 0.1rem solid #ccc;
     border-radius: 0.3rem;
     padding: 1rem;
@@ -65,7 +66,7 @@
   }
   li span {
     position: absolute;
-    right: 1rem;
+    right: 0rem;
   }
   span  {
     background-color: #8402ff;
@@ -84,9 +85,24 @@
     color: gray;
   }
   .userclick{
-    padding: 1rem;
     background: #8402ff;
     color: #fff;
     border: none;
     border-radius: .4rem;
+  }
+  .todo-input-container{
+    position: relative;
+  }
+  .todo-input-container input{
+    width: 100%;
+  }
+  .todo-input-container button{
+    position: absolute;
+    right: .2rem;
+    top:  .2rem;
+    bottom:  .2rem;
+    padding: 0 .8rem;
+  }
+  .todo-input-container button:hover{
+    background-color: rgb(7, 157, 107);
   }
